# messaging_and_calls_with_python

./: .gitignore  README.md  pyproject.toml
app/: nexmo_text_messaging.py  twilio_text_messaging.py  twilio_voice_calling.py
