[tool.poetry]
name = "messaging-and-calls-with-python"
version = "0.1.0"
description = ""
authors = ["Vetrichelvan"]
readme = "README.md"
packages = [{include = "messaging_and_calls_with_python"}]

[tool.poetry.dependencies]
python = "^3.11"
nexmo = "^2.5.2"
twilio = "^7.16.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.1"
pylint-quotes = "^0.2.3"
black = {extras = ["d"], version = "^23.1.0"}
isort = "^5.12.0"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
